--- a/doc/项目需求和设计文档.md
+++ b/doc/项目需求和设计文档.md
@@ -1,8 +1,22 @@
 # 前台系统
 
+加工企业或农业大棚展示
 
+每种蔬菜或加工品质量溯源展示
 
+# 后台管理系统
 
+全程监控和数据化管理功能
 
-# 后台系统
+- 农产品管理：如每个阶段、生产周期的记录与存储、显示管理功能； 
+- 环境管理：空气温度、湿度、二氧化碳、光照度，土壤温度、湿度等
 
+农产品质量溯源功能
+
+- 结合RFID电子标签对每种蔬菜或加工品的来源、等级、培育场地以及在培育、生产、质检、运输等过程中具体实施人员等信息进行的实时数据
+
+如存储与查询、显示；各种历史信息的显示和查询，可视化功能；
+
+各类传感器与监控设备的管理；阈值设置、控制和告警；
+
+加工企业或农业大鹏展示，每种蔬菜或加工品质量溯源展示。
