--- a/doc/项目需求和设计文档.md
+++ b/doc/项目需求和设计文档.md
@@ -5,6 +5,7 @@
 每种蔬菜或加工品质量溯源展示
 
 内嵌视频播放,找一些实际成品的宣传视频
+
 # 后台管理系统
 
 全程监控和数据化管理功能
@@ -12,12 +13,45 @@
 - 农产品管理：如每个阶段、生产周期的记录与存储、显示管理功能； 
 - 环境管理：空气温度、湿度、二氧化碳、光照度，土壤温度、湿度等
 
+
+### 后台管理
+
 农产品质量溯源功能
 
 - 结合RFID电子标签对每种蔬菜或加工品的来源、等级、培育场地以及在培育、生产、质检、运输等过程中具体实施人员等信息进行的实时数据
 
-如存储与查询、显示；各种历史信息的显示和查询，可视化功能；
+  1. 溯源商品属性  
+     来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员  溯源id  商品名称 创建时间 更新时间 创建人 溯源码 溯源扫描次数 
+  2. 溯源新增 溯源修改 删除
+     前端输入: 来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员 
+  3. 溯源查询 
+     1. 产品名称 2. 溯源id 3. 时间段 
 
-各类传感器与监控设备的管理；阈值设置、控制和告警；
+空气温度、湿度、二氧化碳、光照度，土壤温度、湿度等信息的管理，如存储与查询、显示；各种历史信息的显示和查询，可视化功能；各类传感器与监控设备的管理；阈值设置、控制和告警；
+
+  1. 监控属性 空气温度、湿度、二氧化碳、光照度，土壤温度、湿度 时间(以天为单位) 大棚编号 
+  2. 数据查询 大鹏编号 时间段 查询颗粒度
+  3. 阈值设置 大鹏编号  (属性)(max min 告警控制) 修改日期 创建日期 变更人  大鹏告警控制 
+  4. 告警: 1) 站内消息  1. 当前登录和历史登录之间的告警信息   2. 告警信息内容 大鹏  属性 属性值  时间  
+        2) 短信信息 
+
+ 农产品或蔬菜的管理，如每个阶段、生产周期的记录与存储、显示管理功能； 
+
+  1. 农产品属性 农场品id 农场品 (阶段 1,2,3) 大鹏id 
+  2. 增删改  
+
+### 前台展示
 
 加工企业或农业大鹏展示，每种蔬菜或加工品质量溯源展示。
+
+  1. 企业和大鹏的图片或视频展示 
+  2. 农产品溯源查询 输入溯源码 -> 展示溯源信息 
+
+
+项目排期
+
+1. 开发时间 04/18 - 05/02 
+2. 联调时间 05/03 - 05/09
+3. 后端接口文档时间 04/25 
+4. bug记录方式 在线excel 
+5. 每个三天做一次工作汇报  每周日晚七点 开周会 
