[需求] 用户登录注册

--- a/doc/项目需求和设计文档.md
+++ b/doc/项目需求和设计文档.md
@@ -12,7 +12,7 @@
 - 农产品管理：如每个阶段、生产周期的记录与存储、显示管理功能； 
 - 环境管理：空气温度、湿度、二氧化碳、光照度，土壤温度、湿度等
 
-## 0. 登录
+## 0. 登录注册
 
 ## 1. 农产品管理
 
@@ -27,13 +27,13 @@
 
 1. 溯源商品属性 
 
-来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员  溯源id  商品名称 创建时间 更新时间 创建人 溯源码 溯源扫描次数 
+   来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员  溯源id  商品名称 创建时间 更新时间 创建人 溯源码 溯源扫描次数 
 
 2. 溯源新增 溯源修改 删除
-前端输入: 来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员 
+  前端输入: 来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员 
 
 3. 溯源查询 
-产品名称 2. 溯源id 3. 时间段 
+  产品名称 2. 溯源id 3. 时间段 
 
 ## 3. 环境变量管理
 
