[需求] 根据时间间隔查询溯源

--- a/doc/项目需求和设计文档.md
+++ b/doc/项目需求和设计文档.md
@@ -12,13 +12,16 @@
 - 农产品管理：如每个阶段、生产周期的记录与存储、显示管理功能； 
 - 环境管理：空气温度、湿度、二氧化碳、光照度，土壤温度、湿度等
 
-## 0. 登录注册
+## 0. 用户登录
+
+1. 登录
+2. 注册
 
 ## 1. 农产品管理
 
 如每个阶段、生产周期的记录与存储、显示管理功能； 
 
-1. 农产品属性 农场品id 农场品 (阶段 1,2,3) 大棚id 
+1. 农产品属性： 农产品id 农产品 生产阶段 中间阶段 结束阶段 大棚id 
 2. 增删改 
 
 ## 2. 农产品质量溯源功能
@@ -27,13 +30,13 @@
 
 1. 溯源商品属性 
 
-   来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员  溯源id  商品名称 创建时间 更新时间 创建人 溯源码 溯源扫描次数 
+   溯源id  商品名称 来源、等级、培育场地 培育人员、生产人员、质检人员、运输人员  创建时间 更新时间 创建人 溯源码 溯源扫描次数 
 
 2. 溯源新增 溯源修改 删除
-  前端输入: 来源、等级、培育场地 培育、生产、质检、运输等过程中具体实施人员 
+  前端输入: 来源、等级、培育场地 培育人员、生产人员、质检人员、运输人员
 
 3. 溯源查询 
-  产品名称 2. 溯源id 3. 时间段 
+  产品名称 溯源id 时间段 
 
 ## 3. 环境变量管理
 
